--- a/CrossPlatformDSA/Views/Shared/_Layout.cshtml
+++ b/CrossPlatformDSA/Views/Shared/_Layout.cshtml
@@ -24,6 +24,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="NcaLayer" asp-action="Index">Подписать</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Kalkan" asp-action="Index">Проверить</a>
+                        </li>
                     </ul>
                 </div>
             </div>
