--- a/CrossPlatformDSA/Views/Kalkan/VerifyCMS.cshtml
+++ b/CrossPlatformDSA/Views/Kalkan/VerifyCMS.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model CrossPlatformDSA.DSA.Models.UserCertInfo
 @{
     ViewData["Title"] = "VerifyCMS";
 }
@@ -9,5 +9,22 @@
 </div>
 <div>
    Platform:  @ViewBag.Platform
+</div>
+<div>
+    <h2>Информация о пользователе</h2>
+    <p>@Model?.nameAndSurname @Model?.middleName</p>
+    <p>@Model?.email</p>
+    <p>@Model?.IIN</p>
+    <p>@Model?.notBefore</p>
+    <p>@Model?.notAfter</p>
+    <p>@Model?.serialNumberCert</p>
+    <p>@Model?.signTime</p>
+
+
+</div>
+<div>
+    <form asp-controller="Kalkan" asp-action="GetFile" method="post" enctype="multipart/form-data">
+        <button type="submit">Скачать исходный файл</button>
+    </form>
 </div>
 
