first publish on nginx with war certificates

--- a/CrossPlatformDSA/Views/Kalkan/VerifyCMS.cshtml
+++ b/CrossPlatformDSA/Views/Kalkan/VerifyCMS.cshtml
@@ -19,6 +19,7 @@
     <p>@Model?.notAfter</p>
     <p>@Model?.serialNumberCert</p>
     <p>@Model?.signTime</p>
+    <p>@Model?.extraInfo</p>
 
 
 </div>
